--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" href="images/Logo.jpg" type="image/jpeg">
   <meta name="theme-color" content="#ffffff">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <style>
     * { box-sizing: border-box; }
@@ -135,3 +136,4 @@
 <script src="../main.js"></script>
 </body>
 </html>
+
