--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,7 @@
   <link rel="icon" href="images/Logo.jpg" type="image/jpeg">
   <meta name="theme-color" content="#ffffff">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <style>
     * { box-sizing: border-box; }
@@ -87,3 +88,4 @@
 <script src="../main.js"></script>
 </body>
 </html>
+
